--- a/src/Reactive.EventAggregator/Reactive.EventAggregator/EventAggregator.csproj
+++ b/src/Reactive.EventAggregator/Reactive.EventAggregator/EventAggregator.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Collection.cs" />
+    <Compile Include="ThreadSafeDictionary\ThreadSafeDictionary.cs" />
     <Compile Include="IEventAggregator.cs" />
     <Compile Include="EventAggregator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
