--- a/src/Reactive.EventAggregator/EventAggregator.SL4-WindowsPhone71.csproj
+++ b/src/Reactive.EventAggregator/EventAggregator.SL4-WindowsPhone71.csproj
@@ -25,7 +25,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>Bin\SL4-WindowsPhone71\Debug</OutputPath>
+    <OutputPath>bin\SL4-WindowsPhone71\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;SILVERLIGHT;WINDOWS_PHONE</DefineConstants>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
@@ -35,7 +35,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>Bin\SL4-WindowsPhone71\Release</OutputPath>
+    <OutputPath>bin\SL4-WindowsPhone71\Release\</OutputPath>
     <DefineConstants>TRACE;SILVERLIGHT;WINDOWS_PHONE</DefineConstants>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
