--- a/src/Reactive.EventAggregator/Reactive.EventAggregator.nuspec
+++ b/src/Reactive.EventAggregator/Reactive.EventAggregator.nuspec
@@ -2,13 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Reactive.EventAggregator</id>
-    <version>1.0.2.0</version>
+    <version>1.0.2-preview</version>
     <title>Reactive.EventAggregator</title>
-    <authors>Brendan</authors>
-    <owners>Brendan</owners>
+    <authors>José F. Romaniello, Brendan Forster</authors>
+    <owners>Brendan Forster</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Description</description>
-    <copyright>Copyright ©  2012</copyright>
+    <description>A portable EventAggregator based on Rx for .NET 4.0+, Silverlight 4/5, WP7/8 and Windows Store Apps!</description>
+    <copyright>Copyright © 2013</copyright>
     <dependencies>
       <group targetFramework="windowsphone8">
         <dependency id="Rx-Linq" version="2.0.21103" />
@@ -42,23 +42,17 @@
   </metadata>
 
    <files>
-      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\net40" />
-      <!--<file src="bin\Portable\Release\Reactive.EventAggretator.pdb" target="lib\net40" />-->
+      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\Net40" />
 
-      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\net45" />
-      <!--<file src="bin\Portable\Release\Reactive.EventAggretator.pdb" target="lib\net45" />-->
+      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\Net45" />
 
       <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\Portable-Net45+WinRT45" />
-      <!--<file src="bin\Portable\Release\Reactive.EventAggretator.pdb" target="lib\Portable-Net45+WinRT45" />-->
 
       <file src="bin\SL4-WindowsPhone71\Release\Reactive.EventAggregator.dll" target="lib\SL4-WindowsPhone71" />
-      <!--<file src="bin\SL4-WindowsPhone71\Release\Reactive.EventAggretator.pdb" target="lib\SL4-WindowsPhone71" />-->
 
       <file src="bin\SL5\Release\Reactive.EventAggregator.dll" target="lib\SL5" />
-      <!--<file src="bin\SL5\Release\Reactive.EventAggretator.pdb" target="lib\SL5" />-->
 
       <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\windows8" />
-      <!--<file src="bin\Portable\Release\Reactive.EventAggretator.pdb" target="lib\windows8" />-->
 
     </files>
 </package>
