oops missed the NET40 package

--- a/src/Reactive.EventAggregator/Reactive.EventAggregator.nuspec
+++ b/src/Reactive.EventAggregator/Reactive.EventAggregator.nuspec
@@ -18,7 +18,7 @@
   </metadata>
 
    <files>
-      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\Net40" />
+      <file src="bin\Net40\Release\Reactive.EventAggregator.dll" target="lib\Net40" />
 
       <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\Net45" />
 
