--- a/src/Reactive.EventAggregator/packages.config
+++ b/src/Reactive.EventAggregator/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Rx-Core" version="2.1.30214.0" targetFramework="portable-net45+wp80+win" />
-  <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="portable-net45+wp80+win" />
-  <package id="Rx-Linq" version="2.1.30214.0" targetFramework="portable-net45+wp80+win" />
+  <package id="Rx-Core" version="2.2.4" targetFramework="portable-net45+win+wp80" />
+  <package id="Rx-Interfaces" version="2.2.4" targetFramework="portable-net45+win+wp80" />
+  <package id="Rx-Linq" version="2.2.4" targetFramework="portable-net45+win+wp80" />
+  <package id="Rx-Main" version="2.2.4" targetFramework="portable-net45+win+wp80" />
+  <package id="Rx-PlatformServices" version="2.2.4" targetFramework="portable-net45+win+wp80" />
 </packages>
