use version token

--- a/src/Reactive.EventAggregator/Reactive.EventAggregator.nuspec
+++ b/src/Reactive.EventAggregator/Reactive.EventAggregator.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Reactive.EventAggregator</id>
-    <version>1.1.0</version>
+    <version>$version$</version>
     <title>Reactive.EventAggregator</title>
     <authors>José F. Romaniello, Brendan Forster</authors>
     <owners>Brendan Forster</owners>
