--- a/src/Reactive.EventAggregator/EventAggregator.SL5.csproj
+++ b/src/Reactive.EventAggregator/EventAggregator.SL5.csproj
@@ -31,6 +31,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\SL5\Debug\</OutputPath>
+    <IntermediateOutputPath>obj\SL5\Debug\</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE;SILVERLIGHT</DefineConstants>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
@@ -41,6 +42,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\SL5\Release\</OutputPath>
+    <IntermediateOutputPath>obj\SL5\Release\</IntermediateOutputPath>
     <DefineConstants>TRACE;SILVERLIGHT</DefineConstants>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
