--- a/src/Reactive.EventAggregator/Reactive.EventAggregator.nuspec
+++ b/src/Reactive.EventAggregator/Reactive.EventAggregator.nuspec
@@ -15,11 +15,13 @@
   </metadata>
 
    <files>
-      <file src="bin\Net40\Release\Reactive.EventAggregator.dll" target="lib\Net40" />
-      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\Net45" />
-      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\Portable-Net45+WinRT45" />
-      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\Portable-Net45+wp80+win" />
-      <file src="bin\SL5\Release\Reactive.EventAggregator.dll" target="lib\SL5" />
+      <file src="bin\Net40\Release\Reactive.EventAggregator.dll" target="lib\net40" />
+      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\net45" />
+      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\portable-Net45+winrt45+wp8+wpa81" />
+      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\portable-win81+wpa81" />
+      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\portable-windows8+net45+wp8" />
+      <file src="bin\SL5\Release\Reactive.EventAggregator.dll" target="lib\sl5" />
       <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\windows8" />
-    </files>
+      <file src="bin\Portable\Release\Reactive.EventAggregator.dll" target="lib\windowsphone8" />
+   </files>
 </package>
