--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ image: Visual Studio 2017
 skip_branch_with_pr: true
 
 environment:
-  VERSION: 4.0.0-rc
+  VERSION: 4.0.0
 
 cache:
   - tools -> build.ps1
